[INJIWEB-268] : adding literal support for verification error handling
Signed-off-by: Vijay <94220135+vijay151096@users.noreply.github.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -39,6 +39,28 @@
         "title": "جلسة غير صالحة",
         "subTitle": "الجلسة غير صالحة أو الجلسة مكتملة"
       },
+      "verification": {
+        "proof_type_not_supported": {
+          "title": "حدث خطأ",
+          "subTitle": "آسف! "
+        },
+        "json_parsing_failed": {
+          "title": "حدث خطأ",
+          "subTitle": "عذرًا، بسبب خطأ فني، لا يمكننا تنزيل VC. "
+        },
+        "signature_verification_failed": {
+          "title": "حدث خطأ",
+          "subTitle": "آسف! "
+        },
+        "unknown_exception": {
+          "title": "حدث خطأ",
+          "subTitle": "عذرًا، يبدو أن خدماتنا غير متاحة مؤقتًا. "
+        },
+        "proof_document_not_found": {
+          "title": "حدث خطأ",
+          "subTitle": "آسف! "
+        }
+      },
       "generic": {
         "title": "حدث خطأ",
         "subTitle": "عذرًا، بسبب خطأ فني، لا يمكننا تنزيل VC. "
