--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -39,6 +39,28 @@
         "title": "ಅಮಾನ್ಯವಾದ ಸೆಷನ್",
         "subTitle": "ಅಧಿವೇಶನ ಮಾನ್ಯವಾಗಿಲ್ಲ ಅಥವಾ ಅಧಿವೇಶನ ಪೂರ್ಣಗೊಂಡಿದೆ"
       },
+      "verification": {
+        "proof_type_not_supported": {
+          "title": "ಒಂದು ದೋಷ ಸಂಭವಿಸಿದೆ",
+          "subTitle": "ಕ್ಷಮಿಸಿ! "
+        },
+        "json_parsing_failed": {
+          "title": "ಒಂದು ದೋಷ ಸಂಭವಿಸಿದೆ",
+          "subTitle": "ಕ್ಷಮಿಸಿ, ತಾಂತ್ರಿಕ ದೋಷದಿಂದಾಗಿ, ನಮಗೆ VC ಅನ್ನು ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗುತ್ತಿಲ್ಲ. "
+        },
+        "signature_verification_failed": {
+          "title": "ಒಂದು ದೋಷ ಸಂಭವಿಸಿದೆ",
+          "subTitle": "ಕ್ಷಮಿಸಿ! "
+        },
+        "unknown_exception": {
+          "title": "ಒಂದು ದೋಷ ಸಂಭವಿಸಿದೆ",
+          "subTitle": "ಕ್ಷಮಿಸಿ, ನಮ್ಮ ಸೇವೆಗಳು ತಾತ್ಕಾಲಿಕವಾಗಿ ಲಭ್ಯವಿಲ್ಲ ಎಂದು ತೋರುತ್ತಿದೆ. "
+        },
+        "proof_document_not_found": {
+          "title": "ಒಂದು ದೋಷ ಸಂಭವಿಸಿದೆ",
+          "subTitle": "ಕ್ಷಮಿಸಿ! "
+        }
+      },
       "generic": {
         "title": "ಒಂದು ತಪ್ಪು ನಡೆದಿದೆ",
         "subTitle": "ಕ್ಷಮಿಸಿ, ತಾಂತ್ರಿಕ ದೋಷದಿಂದಾಗಿ, ನಮಗೆ VC ಅನ್ನು ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗುತ್ತಿಲ್ಲ. "
