--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -39,6 +39,28 @@
         "title": "தவறான அமர்வு",
         "subTitle": "அமர்வு செல்லாது அல்லது அமர்வு முடிந்தது"
       },
+      "verification": {
+        "proof_type_not_supported": {
+          "title": "ஒரு பிழை ஏற்பட்டது",
+          "subTitle": "மன்னிக்கவும்! "
+        },
+        "json_parsing_failed": {
+          "title": "ஒரு பிழை ஏற்பட்டது",
+          "subTitle": "மன்னிக்கவும், தொழில்நுட்ப பிழை காரணமாக, எங்களால் VC ஐ பதிவிறக்க முடியவில்லை. "
+        },
+        "signature_verification_failed": {
+          "title": "ஒரு பிழை ஏற்பட்டது",
+          "subTitle": "மன்னிக்கவும்! "
+        },
+        "unknown_exception": {
+          "title": "ஒரு பிழை ஏற்பட்டது",
+          "subTitle": "மன்னிக்கவும், எங்கள் சேவைகள் தற்காலிகமாக கிடைக்கவில்லை. "
+        },
+        "proof_document_not_found": {
+          "title": "ஒரு பிழை ஏற்பட்டது",
+          "subTitle": "மன்னிக்கவும்! "
+        }
+      },
       "generic": {
         "title": "ஒரு பிழை ஏற்பட்டது",
         "subTitle": "மன்னிக்கவும், தொழில்நுட்ப பிழை காரணமாக, எங்களால் VC ஐ பதிவிறக்க முடியவில்லை. "
