[INJIWEB-268] : adding literal support for verification error handling
Signed-off-by: Vijay <94220135+vijay151096@users.noreply.github.com>

--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -59,6 +59,10 @@
         "proof_document_not_found": {
           "title": "An Error Occurred",
           "subTitle": "Sorry! Your credential couldn’t be downloaded as there is an issue with validating the issuer's signature. Please contact the admin for further assistance."
+        },
+        "public_key_not_found": {
+          "title": "An Error Occurred",
+          "subTitle": "Sorry! Your credential couldn’t be downloaded as there is an issue with validating the issuer's signature. Please contact the admin for further assistance."
         }
       },
       "generic": {
