--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -59,6 +59,10 @@
         "proof_document_not_found": {
           "title": "ಒಂದು ದೋಷ ಸಂಭವಿಸಿದೆ",
           "subTitle": "ಕ್ಷಮಿಸಿ! "
+        },
+        "public_key_not_found": {
+          "title": "ಒಂದು ದೋಷ ಸಂಭವಿಸಿದೆ",
+          "subTitle": "ಕ್ಷಮಿಸಿ ವಿತರಕರ ಸಹಿಯನ್ನು ಮೌಲ್ಯೀಕರಿಸುವಲ್ಲಿ ಸಮಸ್ಯೆ ಇರುವುದರಿಂದ ನಿಮ್ಮ ರುಜುವಾತುಗಳನ್ನು ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗಲಿಲ್ಲ. "
         }
       },
       "generic": {
