--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -59,6 +59,10 @@
         "proof_document_not_found": {
           "title": "حدث خطأ",
           "subTitle": "آسف! "
+        },
+        "public_key_not_found": {
+          "title": "حدث خطأ",
+          "subTitle": "عذرًا، تعذر تنزيل بيانات الاعتماد الخاصة بك نظرًا لوجود مشكلة في التحقق من صحة توقيع جهة الإصدار. "
         }
       },
       "generic": {
