--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -59,6 +59,10 @@
         "proof_document_not_found": {
           "title": "एक त्रुटि पाई गई",
           "subTitle": "क्षमा मांगना! "
+        },
+        "public_key_not_found": {
+          "title": "एक त्रुटि पाई गई",
+          "subTitle": "क्षमा करें, आपका क्रेडेंशियल डाउनलोड नहीं किया जा सका क्योंकि जारीकर्ता के हस्ताक्षर को मान्य करने में कोई समस्या है। "
         }
       },
       "generic": {
