--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -59,6 +59,10 @@
         "proof_document_not_found": {
           "title": "ஒரு பிழை ஏற்பட்டது",
           "subTitle": "மன்னிக்கவும்! "
+        },
+        "public_key_not_found": {
+          "title": "ஒரு பிழை ஏற்பட்டது",
+          "subTitle": "மன்னிக்கவும், வழங்குபவரின் கையொப்பத்தைச் சரிபார்ப்பதில் சிக்கல் உள்ளதால் உங்கள் நற்சான்றிதழைப் பதிவிறக்க முடியவில்லை. "
         }
       },
       "generic": {
