--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -127,5 +127,30 @@
       "description3": "2. No issuers have been configured.",
       "description4": "In either case, please contact your technical team to address the issue."
     }
+  },
+  "DataShareExpiryModal": {
+    "title": "Share Validity",
+    "subTitle": "Please provide your consent to set a validity for sharing the {{credentialName}}",
+    "content": {
+      "selectedDocument": "Selected Document",
+      "consent" : "Consent Validity *",
+      "validityTimesHeader": "Number of times",
+      "validityTimesOptions": {
+        "once": "Once",
+        "thrice": "Thrice",
+        "noLimit": "No Limit",
+        "custom": "Custom"
+      },
+      "validityDate": "Date"
+    },
+    "success": "Proceed",
+    "cancel": "Back",
+    "disclaimer": "Please note that the QR Code can be shared only for the number of times you have chosen here. To use the QR Code for sharing again, you have to download the PDF again."
+  },
+  "CustomExpiryModal": {
+    "title": "Please enter the number of times you want to use this credential ",
+    "metrics": "Times",
+    "success": "Proceed",
+    "cancel": "Cancel"
   }
 }
