[INJIWEB-700]: secure time bound storage- test cases
Signed-off-by: Vijay <94220135+vijay151096@users.noreply.github.com>

--- a/inji-web/src/locales/fr.json
+++ b/inji-web/src/locales/fr.json
@@ -127,5 +127,30 @@
       "description3": "2. Aucun émetteur n'a été configuré.",
       "description4": "Dans les deux cas, veuillez contacter votre équipe technique pour résoudre le problème."
     }
+  },
+  "DataShareExpiryModal": {
+    "title": "Validité du partage",
+    "subTitle": "Veuillez donner votre consentement pour définir une validité pour le partage du {{credentialName}}",
+    "content": {
+      "selectedDocument": "Document sélectionné",
+      "consent": "Validité du consentement *",
+      "validityTimesHeader": "Nombre de fois",
+      "validityTimesOptions": {
+        "once": "Une fois",
+        "thrice": "Trois fois",
+        "noLimit": "Aucune limite",
+        "custom": "Coutume"
+      },
+      "validityDate": "Date"
+    },
+    "success": "Procéder",
+    "cancel": "Dos",
+    "disclaimer": "Veuillez noter que le QR Code ne peut être partagé que le nombre de fois que vous avez choisi ici. "
+  },
+  "CustomExpiryModal": {
+    "title": "Veuillez saisir le nombre de fois que vous souhaitez utiliser cet identifiant ",
+    "metrics": "Fois",
+    "success": "Procéder",
+    "cancel": "Annuler"
   }
 }
