--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -127,5 +127,30 @@
       "description3": "2. ಯಾವುದೇ ವಿತರಕರನ್ನು ಕಾನ್ಫಿಗರ್ ಮಾಡಲಾಗಿಲ್ಲ.",
       "description4": "ಎರಡೂ ಸಂದರ್ಭಗಳಲ್ಲಿ, ಸಮಸ್ಯೆಯನ್ನು ಪರಿಹರಿಸಲು ದಯವಿಟ್ಟು ನಿಮ್ಮ ತಾಂತ್ರಿಕ ತಂಡವನ್ನು ಸಂಪರ್ಕಿಸಿ."
     }
+  },
+  "DataShareExpiryModal": {
+    "title": "Share Validity",
+    "subTitle": "გთხოვთ, მიუთითოთ თქვენი თანხმობა გაზიარების მოქმედების დაწესებაზე {{credentialName}}",
+    "content": {
+      "selectedDocument": "არჩეული დოკუმენტი",
+      "consent": "თანხმობის ვადა *",
+      "validityTimesHeader": "რამდენჯერმე",
+      "validityTimesOptions": {
+        "once": "ერთხელ",
+        "thrice": "სამჯერ",
+        "noLimit": "არანაირი ლიმიტი",
+        "custom": "საბაჟო"
+      },
+      "validityDate": "თარიღი"
+    },
+    "success": "გაგრძელება",
+    "cancel": "უკან",
+    "disclaimer": "გთხოვთ, გაითვალისწინოთ, რომ QR კოდის გაზიარება შესაძლებელია მხოლოდ იმდენჯერ, რამდენჯერაც აირჩევთ აქ. "
+  },
+  "CustomExpiryModal": {
+    "title": "გთხოვთ, შეიყვანოთ რამდენჯერ გსურთ ამ რწმუნებათა სიგელის გამოყენება ",
+    "metrics": "ჯერ",
+    "success": "გაგრძელება",
+    "cancel": "გაუქმება"
   }
 }
