--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -127,5 +127,30 @@
       "description3": "2. வழங்குபவர்கள் யாரும் கட்டமைக்கப்படவில்லை.",
       "description4": "எந்தவொரு சந்தர்ப்பத்திலும், சிக்கலைத் தீர்க்க உங்கள் தொழில்நுட்பக் குழுவைத் தொடர்பு கொள்ளவும்."
     }
+  },
+  "DataShareExpiryModal": {
+    "title": "பங்கு செல்லுபடியாகும்",
+    "subTitle": "பகிர்வதற்கான செல்லுபடியை அமைக்க உங்கள் ஒப்புதலை வழங்கவும் {{credentialName}}",
+    "content": {
+      "selectedDocument": "தேர்ந்தெடுக்கப்பட்ட ஆவணம்",
+      "consent": "ஒப்புதல் செல்லுபடியாகும் *",
+      "validityTimesHeader": "முறைகளின் எண்ணிக்கை",
+      "validityTimesOptions": {
+        "once": "ஒருமுறை",
+        "thrice": "மூன்று முறை",
+        "noLimit": "வரம்பு இல்லை",
+        "custom": "தனிப்பயன்"
+      },
+      "validityDate": "தேதி"
+    },
+    "success": "தொடரவும்",
+    "cancel": "மீண்டும்",
+    "disclaimer": "நீங்கள் இங்கு எத்தனை முறை தேர்வு செய்தீர்களோ அந்த அளவுக்கு மட்டுமே QR குறியீட்டைப் பகிர முடியும் என்பதை நினைவில் கொள்ளவும். "
+  },
+  "CustomExpiryModal": {
+    "title": "இந்த நற்சான்றிதழை நீங்கள் எத்தனை முறை பயன்படுத்த விரும்புகிறீர்கள் என்பதை உள்ளிடவும் ",
+    "metrics": "நேரங்கள்",
+    "success": "தொடரவும்",
+    "cancel": "ரத்து செய்"
   }
 }
