--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -127,5 +127,30 @@
       "description3": "2. कोई जारीकर्ता कॉन्फ़िगर नहीं किया गया है.",
       "description4": "किसी भी स्थिति में, समस्या के समाधान के लिए कृपया अपनी तकनीकी टीम से संपर्क करें।"
     }
+  },
+  "DataShareExpiryModal": {
+    "title": "वैधता साझा करें",
+    "subTitle": "कृपया साझा करने की वैधता निर्धारित करने के लिए अपनी सहमति प्रदान करें {{credentialName}}",
+    "content": {
+      "selectedDocument": "चयनित दस्तावेज़",
+      "consent": "सहमति की वैधता*",
+      "validityTimesHeader": "कितनी बार",
+      "validityTimesOptions": {
+        "once": "एक बार",
+        "thrice": "तीन बार",
+        "noLimit": "कोई सीमा नहीं",
+        "custom": "रिवाज़"
+      },
+      "validityDate": "तारीख"
+    },
+    "success": "आगे बढ़ना",
+    "cancel": "पीछे",
+    "disclaimer": "कृपया ध्यान दें कि क्यूआर कोड केवल उतनी ही बार साझा किया जा सकता है जितनी बार आपने यहां चुना है। "
+  },
+  "CustomExpiryModal": {
+    "title": "कृपया वह संख्या दर्ज करें जितनी बार आप इस क्रेडेंशियल का उपयोग करना चाहते हैं ",
+    "metrics": "टाइम्स",
+    "success": "आगे बढ़ना",
+    "cancel": "रद्द करना"
   }
 }
