[INJIWEB-1025] : coming soon toast for quick tip
Signed-off-by: Vijay <94220135+vijay151096@users.noreply.github.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -57,6 +57,7 @@
     },
     "QuickTip": {
       "heading": "نصائح سريعة لتنزيل بياناتك فورًا",
+      "toastText":"قريباً",
       "buttontext": "انقر هنا"
     }
   },
