--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -57,6 +57,7 @@
     },
     "QuickTip": {
       "heading": "अपने क्रेडेंशियल्स को तुरंत डाउनलोड करने के लिए त्वरित सुझाव",
+      "toastText":"जल्द आ रहा है",
       "buttontext": "यहां क्लिक करें"
     }
   },
