--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -57,6 +57,7 @@
     },
     "QuickTip": {
       "heading": "ನಿಮ್ಮ ಕ್ರೆಡೆನ್ಶಿಯಲ್ಗಳನ್ನು ತಕ್ಷಣ ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ತ್ವರಿತ ಸಲಹೆಗಳು",
+      "toastText":"ಶೀಘ್ರದಲ್ಲೇ ಬರಲಿದೆ",
       "buttontext": "ಇಲ್ಲಿ ಕ್ಲಿಕ್ ಮಾಡಿ"
     }
   },
