--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -57,6 +57,7 @@
     },
     "QuickTip": {
       "heading": "உங்கள் சான்றுகளை உடனடியாக பதிவிறக்குவதற்கான விரைவான குறிப்புகள்",
+      "toastText":"விரைவில்",
       "buttontext": "இங்கே கிளிக் செய்யவும்"
     }
   },
