[INJIWEB-980]: Change INJI Web to Wallet
Signed-off-by: Kamlesh Singh Bisht <kamlesh.bisht@infosys.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -1,7 +1,7 @@
 {
   "PageTemplate": {
     "Header": {
-      "aboutInji": "حول إنجي ويب",
+      "aboutInji": "حول محفظة إنجي",
       "help": "يساعد"
     },
     "Footer": {
@@ -75,7 +75,7 @@
       "description1": "بيانات الاعتماد القابلة للتحقق هي مستندات رقمية تساعد المستخدمين على مشاركة المعلومات مثل الهوية أو المؤهلات مع مزود الخدمة والتي يمكن التحقق منها على الفور. "
     },
     "item3": {
-      "title": "كيف يمكنني تنزيل بيانات الاعتماد في Inji Web؟",
+      "title": "كيف يمكنني تنزيل بيانات اعتماد في محفظة إنجي؟",
       "description1": "الخطوة 1: ابحث عن جهة الإصدار واخترها من الصفحة المقصودة وحدد نوع بيانات الاعتماد.",
       "description2": "الخطوة 2: في صفحة المصادقة، أدخل التفاصيل المطلوبة",
       "description3": "الخطوة 3: سيتم تنزيل تنسيق PDF لبيانات الاعتماد التي يمكن التحقق منها في النظام."
