--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -1,7 +1,7 @@
 {
   "PageTemplate": {
     "Header": {
-      "aboutInji": "इंजी वेब के बारे में",
+      "aboutInji": "इंजी वॉलेट के बारे में",
       "help": "मदद"
     },
     "Footer": {
@@ -75,7 +75,7 @@
       "description1": "सत्यापन योग्य क्रेडेंशियल डिजिटल दस्तावेज़ हैं जो उपयोगकर्ताओं को सेवा प्रदाता के साथ पहचान या योग्यता जैसी जानकारी साझा करने में मदद करते हैं जिन्हें तुरंत सत्यापित किया जा सकता है। "
     },
     "item3": {
-      "title": "मैं इंजी वेब में क्रेडेंशियल कैसे डाउनलोड कर सकता हूं?",
+      "title": "मैं इंजी वॉलेट में क्रेडेंशियल कैसे डाउनलोड कर सकता हूं?",
       "description1": "चरण 1: लैंडिंग पृष्ठ से एक जारीकर्ता खोजें और चुनें और एक क्रेडेंशियल प्रकार चुनें।",
       "description2": "चरण 2: प्रमाणीकरण पृष्ठ में, आवश्यक विवरण प्रदान करें",
       "description3": "चरण 3: सत्यापन योग्य क्रेडेंशियल का पीडीएफ प्रारूप सिस्टम में डाउनलोड किया जाएगा।"
