--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -1,7 +1,7 @@
 {
   "PageTemplate": {
     "Header": {
-      "aboutInji": "ಇಂಜಿ ವೆಬ್ ಬಗ್ಗೆ",
+      "aboutInji": "ಇಂಜಿ ವ್ಯಾಲೆಟ್ ಬಗ್ಗೆ",
       "help": "ಸಹಾಯ"
     },
     "Footer": {
@@ -75,7 +75,7 @@
       "description1": "ಪರಿಶೀಲಿಸಬಹುದಾದ ರುಜುವಾತುಗಳು ಡಿಜಿಟಲ್ ಡಾಕ್ಯುಮೆಂಟ್‌ಗಳಾಗಿದ್ದು, ತಕ್ಷಣವೇ ಪರಿಶೀಲಿಸಬಹುದಾದ ಸೇವಾ ಪೂರೈಕೆದಾರರಿಗೆ ಗುರುತು ಅಥವಾ ಅರ್ಹತೆಗಳಂತಹ ಮಾಹಿತಿಯನ್ನು ಹಂಚಿಕೊಳ್ಳಲು ಬಳಕೆದಾರರಿಗೆ ಸಹಾಯ ಮಾಡುತ್ತದೆ. "
     },
     "item3": {
-      "title": "ಇಂಜಿ ವೆಬ್‌ನಲ್ಲಿ ನಾನು ರುಜುವಾತುಗಳನ್ನು ಹೇಗೆ ಡೌನ್‌ಲೋಡ್ ಮಾಡಬಹುದು?",
+      "title": "ಇಂಜಿ ವ್ಯಾಲೆಟ್ ನಲ್ಲಿ ರುಜುವಾತುಗಳನ್ನು ನಾನು ಹೇಗೆ ಡೌನ್ ಲೋಡ್ ಮಾಡಬಹುದು?",
       "description1": "ಹಂತ 1: ಲ್ಯಾಂಡಿಂಗ್ ಪುಟದಿಂದ ವಿತರಕರನ್ನು ಹುಡುಕಿ ಮತ್ತು ಆಯ್ಕೆಮಾಡಿ ಮತ್ತು ರುಜುವಾತು ಪ್ರಕಾರವನ್ನು ಆಯ್ಕೆಮಾಡಿ.",
       "description2": "ಹಂತ 2: ದೃಢೀಕರಣ ಪುಟದಲ್ಲಿ, ಅಗತ್ಯವಿರುವ ವಿವರಗಳನ್ನು ಒದಗಿಸಿ",
       "description3": "ಹಂತ 3: ಪರಿಶೀಲಿಸಬಹುದಾದ ರುಜುವಾತುಗಳ PDF ಸ್ವರೂಪವನ್ನು ಸಿಸ್ಟಮ್‌ಗೆ ಡೌನ್‌ಲೋಡ್ ಮಾಡಲಾಗುತ್ತದೆ."
