--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -1,7 +1,7 @@
 {
   "PageTemplate": {
     "Header": {
-      "aboutInji": "இன்ஜி வலை பற்றி",
+      "aboutInji": "இஞ்சி வாலட் பற்றி",
       "help": "உதவி"
     },
     "Footer": {
@@ -75,7 +75,7 @@
       "description1": "சரிபார்க்கக்கூடிய நற்சான்றிதழ்கள் டிஜிட்டல் ஆவணங்களாகும், அவை உடனடியாகச் சரிபார்க்கக்கூடிய சேவை வழங்குநருக்கு அடையாளம் அல்லது தகுதிகள் போன்ற தகவல்களைப் பகிர பயனர்களுக்கு உதவும். "
     },
     "item3": {
-      "title": "இன்ஜி வலையில் நற்சான்றிதழை எவ்வாறு பதிவிறக்குவது?",
+      "title": "இஞ்சி வாலட்டில் நற்சான்றிதழை நான் எவ்வாறு பதிவிறக்குவது?",
       "description1": "படி 1: இறங்கும் பக்கத்தில் இருந்து ஒரு வழங்குநரைத் தேடித் தேர்வு செய்து, நற்சான்றிதழ் வகையைத் தேர்ந்தெடுக்கவும்.",
       "description2": "படி 2: அங்கீகார பக்கத்தில், தேவையான விவரங்களை வழங்கவும்",
       "description3": "படி 3: சரிபார்க்கக்கூடிய நற்சான்றிதழின் PDF வடிவம் கணினியில் பதிவிறக்கம் செய்யப்படும்."
