[INJIWEB-1046]: Fix Web to Wallet
Signed-off-by: Kamlesh Singh Bisht <kamlesh.bisht@infosys.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -16,7 +16,7 @@
       "buttontext": "ابدأ الآن"
     },
     "Features": {
-      "heading": "ميزات إنجي ويب",
+      "heading": "مميزات محفظة انجى",
       "description1": "إدارة سلسة وآمنة للبيانات القابلة للتحقق",
       "description2": "للتفاعلات الرقمية الموثوقة."
     },
@@ -51,7 +51,7 @@
     "FeatureItem5": {
       "heading": "وصول أوسع وتوافق",
       "item1": "متاح على متصفحك المفضل",
-      "description1": "يعمل إنجي ويب مع كروم، سفاري، فايرفوكس، وإيدج.",
+      "description1": "تعمل محفظة Inji مع Chrome و Safari و Firefox و Edge.",
       "item2": "دائمًا في متناول اليد",
       "description2": "تلتقي الراحة مع الوصول أينما كنت، مما يضمن أن مستنداتك دائمًا في متناول اليد."
     },
