--- a/inji-web/src/locales/fr.json
+++ b/inji-web/src/locales/fr.json
@@ -16,7 +16,7 @@
       "buttontext": "Commencer"
     },
     "Features": {
-      "heading": "Caractéristiques de Inji Web",
+      "heading": "Caractéristiques de Inji Wallet",
       "description1": "Gestion transparente et sécurisée des identifiants vérifiables",
       "description2": "pour des interactions numériques de confiance."
     },
@@ -51,7 +51,7 @@
     "FeatureItem5": {
       "heading": "Accès et compatibilité étendus",
       "item1": "Disponible sur votre navigateur préféré",
-      "description1": "Inji Web fonctionne avec Chrome, Safari, Firefox et Edge.",
+      "description1": "Inji Wallet fonctionne avec Chrome, Safari, Firefox et Edge.",
       "item2": "Toujours à portée de main",
       "description2": "La commodité rencontre l'accessibilité où que vous soyez, garantissant que vos documents sont toujours à portée de main."
     },
