--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -16,7 +16,7 @@
       "buttontext": "शुरू करें"
     },
     "Features": {
-      "heading": "इंजी वेब की विशेषताएं",
+      "heading": "इंजी वॉलेट की विशेषताएं",
       "description1": "सत्यापन योग्य क्रेडेंशियल्स का सहज और सुरक्षित प्रबंधन",
       "description2": "विश्वसनीय डिजिटल इंटरैक्शन के लिए।"
     },
@@ -51,7 +51,7 @@
     "FeatureItem5": {
       "heading": "विस्तृत पहुंच और संगतता",
       "item1": "आपके पसंदीदा ब्राउज़र पर उपलब्ध",
-      "description1": "इंजी वेब क्रोम, सफारी, फायरफॉक्स और एज के साथ काम करता है।",
+      "description1": "इंजी वॉलेट क्रोम, सफारी, फायरफॉक्स और एज के साथ काम करता है।",
       "item2": "हमेशा पहुंच के भीतर",
       "description2": "जहां भी आप हों, सुविधा और पहुंच सुनिश्चित करते हुए आपके दस्तावेज़ हमेशा पहुंच के भीतर होते हैं।"
     },
@@ -186,15 +186,15 @@
     },
     "item8":{
       "title": "जब मैं Inji Wallet के वेब इंटरफ़ेस में सत्यापन योग्य क्रेडेंशियल (VC) जेनरेट करता हूँ, तो क्या होता है?",
-      "description1":"1. आप जारीकर्ता और क्रेडेंशियल का प्रकार चुनते हैं.",
-      "description2":"2. प्रमाणीकरण के लिए जारीकर्ता के लॉगिन पेज पर रीडायरेक्ट करता है.",
-      "description3":"3. लॉगिन के बाद, जारीकर्ता VC प्रदान करता है, जिसे ड्यूरियन का उपयोग करके JSON के रूप में सुरक्षित रूप से संग्रहीत किया जाता है.",
-      "description4":"4.VC विवरण और QR कोड के साथ एक PDF जेनरेट किया जाता है.",
-      "description5":"5.QR कोड आसान शेयरिंग के लिए VC स्टोरेज URL से लिंक होता है."
+      "description1":"1. आप जारीकर्ता और क्रेडेंशियल का प्रकार चुनते हैं।",
+      "description2":"2. प्रमाणीकरण के लिए जारीकर्ता के लॉगिन पेज पर रीडायरेक्ट करता है।",
+      "description3":"3. लॉगिन के बाद, जारीकर्ता VC प्रदान करता है, जिसे ड्यूरियन का उपयोग करके JSON के रूप में सुरक्षित रूप से संग्रहीत किया जाता है।",
+      "description4":"4.VC विवरण और QR कोड के साथ एक PDF जेनरेट किया जाता है।",
+      "description5":"5.QR कोड आसान शेयरिंग के लिए VC स्टोरेज URL से लिंक होता है।"
       },
       "item9":{
       "title":"क्रेडेंशियल PDF में QR कोड की क्या भूमिका है?",
-      "description1":"PDF में QR कोड सुरक्षित VC स्टोरेज URL से लिंक होता है, जिससे सघन डेटा के बिना क्रेडेंशियल को स्कैन करना और पुनर्प्राप्त करना आसान हो जाता है."
+      "description1":"PDF में QR कोड सुरक्षित VC स्टोरेज URL से लिंक होता है, जिससे सघन डेटा के बिना क्रेडेंशियल को स्कैन करना और पुनर्प्राप्त करना आसान हो जाता है।"
       },
       "item10":{
       "title":"इनजी वॉलेट का वेब इंटरफ़ेस कैसे सुनिश्चित करता है कि मेरा VC सुरक्षित रूप से संग्रहीत है?",
@@ -234,11 +234,11 @@
       "title":"क्या Inji Wallet अलग-अलग QR कोड फ़ॉर्मेट को सपोर्ट कर सकता है?",
       "description1":"हां. कॉन्फ़िगरेशन-आधारित जेनरेशन QR कोड में या तो शामिल हो सकता है: ",
       "description2":"1. आसान शेयरिंग के लिए VC स्टोरेज का URL, या ",
-      "description3":"2. JSON (सघन फ़ॉर्मेट) में पूरा VC डेटा."
+      "description3":"2. JSON (सघन फ़ॉर्मेट) में पूरा VC डेटा।"
       },
       "item19":{
       "title":"शेयरिंग के बाद Inji Wallet क्रेडेंशियल वेरिफिकेशन को कैसे हैंडल करता है?",
-      "description1":"शेयरिंग के बाद, Inji Verify VC प्रामाणिकता की जांच करता है. अगर मान्य है, तो वेरिफायर क्रेडेंशियल की वेरिफिकेशन स्थिति की पुष्टि करता है." },
+      "description1":"शेयरिंग के बाद, Inji Verify VC प्रामाणिकता की जांच करता है. अगर मान्य है, तो वेरिफायर क्रेडेंशियल की वेरिफिकेशन स्थिति की पुष्टि करता है।" },
       "item20":{
       "title":"किस तरह के क्रेडेंशियल जारीकर्ता समर्थित हैं?",
       "description1":"कोई भी जारीकर्ता जो OpenID4VCI प्रोटोकॉल का पालन करता है, उस पर Inji Wallet में भरोसा किया जा सकता है। ये जारीकर्ता VC जारी करने और डाउनलोड करने के लिए आवश्यक डेटा प्रदान करते हैं।"
@@ -254,8 +254,8 @@
       "item23":{
         "title":"मैं इंजी वॉलेट में एम्बेडेड VC और ऑनलाइन शेयरिंग के बीच कैसे टॉगल कर सकता हूँ?",
         "description1":"मिमोटो जारीकर्ता की सेटिंग में qr_code_type कॉन्फ़िगर करें: ",
-        "description2":"1. EmbeddedVC: ऑफ़लाइन उपयोग के लिए JSON फ़ॉर्मेट (घने QR कोड) में पूर्ण VC एम्बेड करता है",
-        "description3":"2. OnlineSharing: ऑनलाइन VC स्टोरेज के लिए URL के साथ एक QR कोड जेनरेट करता है, जिससे इसे स्कैन करना और ऑनलाइन शेयर करना आसान हो जाता है."
+        "description2":"1. EmbeddedVC: ऑफ़लाइन उपयोग के लिए JSON फ़ॉर्मेट (घने QR कोड) में पूर्ण VC एम्बेड करता है।",
+        "description3":"2. OnlineSharing: ऑनलाइन VC स्टोरेज के लिए URL के साथ एक QR कोड जेनरेट करता है, जिससे इसे स्कैन करना और ऑनलाइन शेयर करना आसान हो जाता है।"
       }
   },
   "DataShareExpiryModal": {
