--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -16,7 +16,7 @@
       "buttontext": "ಪ್ರಾರಂಭಿಸಿ"
     },
     "Features": {
-      "heading": "ಇಂಜಿ ವೆಬ್‌ನ ವೈಶಿಷ್ಟ್ಯಗಳು",
+      "heading": "ಇಂಜಿ ವ್ಯಾಲೆಟ್ ನ ವೈಶಿಷ್ಟ್ಯಗಳು",
       "description1": "ಪರಿಶೀಲನೀಯ ಕ್ರೆಡೆನ್ಶಿಯಲ್ಗಳ ನಿರಂತರ ಮತ್ತು ಸುರಕ್ಷಿತ ನಿರ್ವಹಣೆ",
       "description2": "ವಿಶ್ವಾಸಾರ್ಹ ಡಿಜಿಟಲ್ ಸಂವಹನಗಳಿಗಾಗಿ."
     },
@@ -51,7 +51,7 @@
     "FeatureItem5": {
       "heading": "ವಿಸ್ತೃತ ಪ್ರವೇಶ ಮತ್ತು ಹೊಂದಾಣಿಕೆ",
       "item1": "ನಿಮ್ಮ ಮೆಚ್ಚಿನ ಬ್ರೌಸರ್‌ನಲ್ಲಿ ಲಭ್ಯವಿದೆ",
-      "description1": "ಇಂಜಿ ವೆಬ್ ಕ್ರೋಮ್, ಸಫಾರಿ, ಫೈರ್‌ಫಾಕ್ಸ್ ಮತ್ತು ಎಡ್ಜ್‌ನೊಂದಿಗೆ ಕೆಲಸ ಮಾಡುತ್ತದೆ.",
+      "description1": "ಇಂಜಿ ವ್ಯಾಲೆಟ್ ಕ್ರೋಮ್, ಸಫಾರಿ, ಫೈರ್ಫಾಕ್ಸ್ ಮತ್ತು ಎಡ್ಜ್ ನೊಂದಿಗೆ ಕಾರ್ಯನಿರ್ವಹಿಸುತ್ತದೆ.",
       "item2": "ಯಾವಾಗಲೂ ತಲುಪುವ ಅಂತರದಲ್ಲಿ",
       "description2": "ನೀವು ಎಲ್ಲಿದ್ದರೂ ಸೌಲಭ್ಯ ಮತ್ತು ಪ್ರವೇಶವನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ, ನಿಮ್ಮ ಡಾಕ್ಯುಮೆಂಟ್‌ಗಳು ಯಾವಾಗಲೂ ತಲುಪುವ ಅಂತರದಲ್ಲಿರುತ್ತವೆ."
     },
