--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -16,7 +16,7 @@
       "buttontext": "தொடங்குங்கள்"
     },
     "Features": {
-      "heading": "இஞ்சி வலைவழியின் அம்சங்கள்",
+      "heading": "Inji Wallet இன் அம்சங்கள்",
       "description1": "சான்றுகளைத் தொடர்ந்து மற்றும் பாதுகாப்பாக நிர்வகித்தல்",
       "description2": "நம்பகமான டிஜிட்டல் தொடர்புகளுக்காக."
     },
@@ -51,7 +51,7 @@
     "FeatureItem5": {
       "heading": "விரிவான அணுகல் மற்றும் இணக்கமானது",
       "item1": "உங்கள் விருப்பமான உலாவியில் கிடைக்கிறது",
-      "description1": "இஞ்சி வலைவழி Chrome, Safari, Firefox மற்றும் Edge உடன் வேலை செய்கிறது.",
+      "description1": "Inji Wallet Chrome, Safari, Firefox மற்றும் Edge உடன் வேலை செய்கிறது.",
       "item2": "எப்போதும் அணுகக்கூடிய இடத்தில்",
       "description2": "நீங்கள் எங்கு இருந்தாலும் வசதி மற்றும் அணுகலை உறுதிசெய்கிறது, உங்கள் ஆவணங்கள் எப்போதும் அணுகக்கூடிய இடத்தில் இருக்கும்."
     },
