--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -16,7 +16,7 @@
       "buttontext":"Get Started"
     },
     "Features":{
-      "heading":"Features of Inji Web",
+      "heading":"Features of Inji Wallet",
       "description1":"Seamless and secure management of verifiable credentials",
       "description2":"for trusted digital interactions."
     },
@@ -25,7 +25,7 @@
       "item1":"Credentials Simplified",
       "description1":"Keep all your essential documents",
       "item2":"No more Paperwork. All In One Place",
-      "description2":"Effortlessly download, store, and retrieve your documents with ease. WIn, win, win."
+      "description2":"Effortlessly download, store, and retrieve your documents with ease. Win, win, win."
     },
     "FeatureItem2":{
       "heading":"Your Documents Downloaded in Second",
@@ -51,7 +51,7 @@
     "FeatureItem5":{
       "heading":"Wider Access & Compatibility",
       "item1":"Available on Your Favourite Browser",
-      "description1":"Inji Web works with Chrome, Safari, Firefox, and Edge.",
+      "description1":"Inji Wallet works with Chrome, Safari, Firefox, and Edge.",
       "item2":"Always Within Reach",
       "description2":"Convenience meets accessibility wherever you are, ensuring your documents are always within reach."
     },
