[INJIWEB-1056] Change CAR theme
Signed-off-by: SAIRAM GIRIRAO <sairam.girirao@infosys.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -1,11 +1,11 @@
 {
   "PageTemplate": {
     "Header": {
-      "aboutInji": "حول إنجي ويب",
+      "home": "الصفحة الرئيسية",
       "help": "يساعد"
     },
     "Footer": {
-      "copyRight": "© 2024 إنجي. "
+      "copyRight": "مدعوم من Inji، منتج MOSIP"
     }
   },
   "HomePage": {
