[INJIWEV-1106]:add green theme changes on release 0.11.x
Signed-off-by: SAIRAM GIRIRAO <sairam.girirao@infosys.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -6,7 +6,7 @@
     },
     "Footer": {
       "product": "منتج MOSIP",
-      "copyRight": "© 2024 إنجي. جميع الحقوق محفوظة."
+      "copyRight": "مدعوم من Inji، منتج MOSIP"
     }
   },
   "HomePage": {
