--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -6,7 +6,7 @@
     },
     "Footer": {
       "product": "A MOSIP Product",
-      "copyRight": "© 2024 Inji. All rights reserved."
+      "copyRight": "Powered by Inji,A MOSIP Product"
     }
   },
   "HomePage": {
