--- a/inji-web/src/locales/fr.json
+++ b/inji-web/src/locales/fr.json
@@ -6,7 +6,7 @@
     },
     "Footer": {
       "product": "Un produit MOSIP",
-      "copyRight": "© 2024 Inji. Tous droits réservés."
+      "copyRight": "Propulsé par Inji, un produit MOSIP"
     }
   },
   "HomePage": {
