--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -6,8 +6,7 @@
     },
     "Footer": {
       "product": "एक MOSIP उत्पाद",
-      "copyRight": "© 2024 इंजि। सर्वाधिकार सुरक्षित।"
-    }
+      "copyRight": "इंजी द्वारा संचालित, एक MOSIP उत्पाद "    }
   },
   "HomePage": {
     "Banner": {
