--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -6,7 +6,7 @@
     },
     "Footer": {
       "product": "ಒಂದು MOSIP ಉತ್ಪನ್ನ",
-      "copyRight": "© 2024 ಇಂಜಿ. ಎಲ್ಲಾ ಹಕ್ಕುಗಳನ್ನು ಕಾಯ್ದಿರಿಸಲಾಗಿದೆ."
+      "copyRight": "ಇಂಜಿಯಿಂದ ಚಾಲಿತವಾಗಿದೆ, MOSIP ಉತ್ಪನ್ನ"
     }
   },
   "HomePage": {
