--- a/inji-web/src/locales/pt.json
+++ b/inji-web/src/locales/pt.json
@@ -6,7 +6,7 @@
     },
     "Footer": {
       "product": "Um produto MOSIP",
-      "copyRight": "© 2024 Inji. Todos os direitos reservados."
+      "copyRight": "Desenvolvido por Inji, um produto MOSIP"
     }
   },
   "HomePage": {
