--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -6,8 +6,7 @@
     },
     "Footer": {
       "product": "ஒரு MOSIP தயாரிப்பு",
-      "copyRight": "© 2024 இஞ்சி. அனைத்து உரிமைகளும் பாதுகாக்கப்பட்டவை."
-    }
+"copyRight": "இன்ஜி மூலம் இயக்கப்படுகிறது, ஒரு MOSIP தயாரிப்பு"    }
   },
   "HomePage": {
     "Banner": {
