[Injiweb-1379] Basic changes in api to bring login page
Signed-off-by: Gurpreet41082 <gurpreet.kaur@thoughtworks.com>

--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -2,7 +2,9 @@
   "PageTemplate": {
     "Header": {
       "home": "Home",
-      "help": "Help"
+      "help": "Help",
+      "login": "Login",
+      "logout": "Logout"
     },
     "Footer": {
       "product": "A MOSIP Product",
