[INJIWEB-1513] post login redirect the user to dashboard layout where user can download the credential by going to home page or view the downloaded credentials by going to stored documents and have the list of menu items in the header dropdown
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -304,5 +304,14 @@
     "metrics": "Times",
     "success": "Proceed",
     "cancel": "Cancel"
+  },
+  "Dashboard": {
+    "Home": {
+      "title": "Home",
+      "welcome": "Welcome"
+    },
+    "StoredCredentials": {
+      "title": "Stored Credentials"
+    }
   }
 }
